refactor: PathPatternRequestMatcher适配
移除已被废弃的AntPathRequestMatcher，使用PathPatternRequestMatcher适配